# gt-on-1234-submission

./: Dockerfile  README.md  _typos.toml  docker-compose.yml  pyproject.toml
src/backend_interview_supply_chain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/supply_chain_network/: README.md  __init__.py  impact_calculation.py  models.py  read.py
tests/: test_readme.py
